--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,124 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight:600;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar{
+  width: 100%;
+  height: 80px;
+  background-color: slateblue;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
+  font-weight: 600;
+}
+
+.navbar .links{
+  text-align: center;
+  margin-right: 50px;
+
+}
+
+.links a{
+  color: orange;
+  text-decoration: none;
+  border-bottom: 3px solid white;
+  padding-bottom: 2px;
+  margin: 10px;
+}
+
+.navbar .user{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  margin-right: 50px;
+}
+
+.user p{
+  font-size: 15px;
+  margin-right: 10px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.user img{
+  font-size: 15px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post_div{
+  position: absolute;
+
+    width: 100%;
+    height: 50%;
+
+    /* Center form on page horizontally & vertically */
+    top: 40%;
+    left: 50%;
+    margin-top: -150px;
+    margin-left: -150px;
+}
+
+.post_home{
+  margin-bottom: 100px;
+}
+
+.postform {
+  background-color: aqua;
+  width: 20%;
+  padding: 12px 12px;
+  margin: 15px 4px;
+  box-sizing: border-box;
+  border: 2px groove navy;
+  text-align: center;
+
+ }
+ 
+ .postform input[type=submit] {
+  width:150px;
+  font-size:20px;
+  cursor:pointer;
+  height:50px;
+  background:lightgreen;
+ }
+ 
+ .postform input[type=submit]:hover {
+  outline:3px solid white;
+  border-width:5px solid red;
+  background:yellow;      
+ }
+
+ .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1000px;
+  margin-block: 2rem;
+  gap: 2rem;
+}
+
+ .card {
+  margin-left: 45%;
+  display: flex;
+  flex-direction: column;
+  width: clamp(20rem, calc(20rem + 2vw), 22rem);
+  overflow: hidden;
+  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 1em;
+  background: lightblue;
+  background: linear-gradient(to right, #ce5050, lightblue);
+
+
+}
+
+.card__body {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
 }
